--- a/styles/style.css
+++ b/styles/style.css
@@ -9,23 +9,23 @@ body {
 }
 .container .esquerdo {
   width: 50%;
-  background-color: blueviolet;
+  background-color: #AE445A;
 }
 .container .esquerdo .texto {
   margin-top: 40%;
   text-align: center;
   font-size: 120px;
-  color: aquamarine;
+  color: #F39F5A;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 .container .direito {
   width: 50%;
-  background-color: aquamarine;
+  background-color: #F39F5A;
 }
 .container .direito .texto {
   margin-top: 40%;
   text-align: center;
   font-size: 120px;
-  color: blueviolet;
+  color: #AE445A;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }/*# sourceMappingURL=style.css.map */
