--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,5 @@
-$cor-principal: blueviolet;
-$cor-secundaria: aquamarine;
+$cor-principal: #AE445A;
+$cor-secundaria: #F39F5A;
 
 body {
     margin: 0;
@@ -12,26 +12,26 @@ body {
 
     .esquerdo {
         width: 50%;
-        background-color: blueviolet;
+        background-color: $cor-principal;
 
         .texto{
             margin-top: 40%;
             text-align: center;
             font-size: 120px;
-            color: aquamarine;
+            color: $cor-secundaria;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
     }
 
     .direito {
         width: 50%;
-        background-color: aquamarine;
+        background-color: $cor-secundaria;
 
         .texto{
             margin-top: 40%;
             text-align: center;
             font-size: 120px;
-            color: blueviolet;
+            color: $cor-principal;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
     }
