--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,9 +1,26 @@
 $cor-principal: #AE445A;
 $cor-secundaria: #F39F5A;
 
-body {
+@mixin reset{
     margin: 0;
     padding: 0;
+} 
+
+@mixin cor-e-texto($cor-fundo, $cor-texto){
+    width: 50%;
+    background-color: $cor-fundo;
+
+        .texto{
+            margin-top: 40%;
+            text-align: center;
+            font-size: 120px;
+            color: $cor-texto;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        }
+}
+
+body {
+    @include reset();
 }
 
 .container {
@@ -11,29 +28,11 @@ body {
     display: flex;
 
     .esquerdo {
-        width: 50%;
-        background-color: $cor-principal;
-
-        .texto{
-            margin-top: 40%;
-            text-align: center;
-            font-size: 120px;
-            color: $cor-secundaria;
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        }
+        @include cor-e-texto($cor-principal, $cor-secundaria);
     }
 
     .direito {
-        width: 50%;
-        background-color: $cor-secundaria;
-
-        .texto{
-            margin-top: 40%;
-            text-align: center;
-            font-size: 120px;
-            color: $cor-principal;
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        }
+        @include cor-e-texto($cor-secundaria, $cor-principal);
     }
 }
 
